<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="size_of_group">Size of group:</string>
    <string name="reset">RESET</string> /srting>
    <string name="submit">SUBMIT</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non smoking</string>
    /string>
</resources>
